# mypkg

./: AUTHORS  Makefile.am  README.md  TODO  configure.ac
mylib/: Makefile.am  mylib.c  mylib.h
mylib/tests/: Makefile.am  test01.c
myprg/: Makefile.am  myprg.c
myprg/tests/: Makefile.am  test01.sh
